--- a/_posts/2024-03-04-mamba.md
+++ b/_posts/2024-03-04-mamba.md
@@ -165,7 +165,7 @@ An article helpful for understand gating can be found <a href='https://medium.co
 
 Note that the connection between RRN gating and the discretization of continuous-time systems is well established. Theorem 1 essentially states that an input-dependent gate can be viewed as the ZOH discretization.
 
-***Theorem 1.*** *When {% katexmm %}$N=1, A=-1, B=1, s_\Delta = \text{Linear}(x), \tau_\Delta = \text{softplus}$, then the selective SSM recurrence takes the form*
+***Theorem 1.*** *When {% katexmm %}$N=1, A=-1, B=1, s_\Delta = \text{Linear}(x), \tau_\Delta = \text{softplus}${% endkatexmm %}, then the selective SSM recurrence takes the form*
 
 {% katexmm %}
 $$
@@ -189,7 +189,7 @@ In case of multiple independent sequences are stitched together, Transformers ca
 
 ***Interpretation of {% katexmm %}$\Delta${% endkatexmm %}***
 {% katexmm %}$\Delta${% endkatexmm %} in general controls the balance between how much to focus or ignore the *current* input. 
-- A large {% katexmm %}$\Delta${% endkatexmm %} results the state {% katexmm %}$h${% endkatexmm %} and focuses on current input {% katexmm %}$x$. 
+- A large {% katexmm %}$\Delta${% endkatexmm %} results the state {% katexmm %}$h${% endkatexmm %} and focuses on current input {% katexmm %}$x${% endkatexmm %}. 
 - A small {% katexmm %}$\Delta${% endkatexmm %} persists the state and ignores the current input. 
 
 
