--- a/_posts/2024-03-04-mamba.md
+++ b/_posts/2024-03-04-mamba.md
@@ -1,6 +1,6 @@
 ---
 title: Mamba - Linear-Time Sequence Modeling with Selective State Spaces
-subtitle: Mamba is a novel architecture thast addresses Transformers’ computational inefficiency on long sequences/
+subtitle: Mamba is a novel architecture thast addresses Transformers’ computational inefficiency on long sequences.
 authors: Albert Gu, Tri Dao
 layout: default
 date: 2024-03-04
