--- a/_posts/2024-03-04-mamba.md
+++ b/_posts/2024-03-04-mamba.md
@@ -1,6 +1,6 @@
 ---
 title: Mamba - Linear-Time Sequence Modeling with Selective State Spaces
-subtitle: Mamba is a novel architecture thast addresses Transformers’ computational inefficiency on long sequences.
+subtitle: Mamba is a novel architecture that addresses Transformers’ computational inefficiency on long sequences.
 authors: Albert Gu, Tri Dao
 layout: default
 date: 2024-03-04
@@ -20,13 +20,13 @@ However, this property also brings in foundamental drawbacks
 - the inability to model anything outside of the *finite* context window
 - *quadratic scaling* with respect to the window length
 
-Recently, *structured state space sequence models* (SSMs) were proposed as a new class of architectures for sequence modeling. These models can be interpreted as a combination of *RNN*s and *CNN*s, with inspirtaion from *classical state space models*. 
+Recently, *structured state space sequence models* (SSMs) were proposed as a new class of architectures for sequence modeling. These models can be interpreted as a combination of *RNN*s and *CNN*s, with inspiration from *classical state space models*. 
 
 The obtained results from SSMs are very promising, as it not only scale linearly or near-linearly with respect to the sequence length but also demonstrates outstanding ability in modelling long-range dependencies, dominating benchmarks such as the Long Range area. 
 
 In addition, many variations of SSMs have been successful in continuous signal data domains such as *audio* and *vision*. However, SSMs have been less effective in modeling *discrete* and *information dense* data such as *text*.
 
-Therefore, the authors purpose a new class of SSM to achieve the performance of Transformers while scaling linearly.
+Therefore, the authors propose a new class of SSM to achieve the performance of Transformers while scaling linearly.
 
 ### Selection Mechanism
 Previous SSMs lacks the ability to select data in an **input-dependent manner**. A new selection mechanism is proposed to to allow the model to filter out *irrelevant* information and *remember* releveant information indefinitely.
@@ -35,7 +35,7 @@ Previous SSMs lacks the ability to select data in an **input-dependent manner**.
 To overcome the requirement where all prior models must be **time-** and **input-invariant** to be computationally efficient, the authors propose a hardware-aware algorithm. Instead of computing the model convolutionally, the algorithm computes the model *recurrently* with a **scan** and does not materialize the expanded state to avoid IO access between different GPU Mem hierarchy.
 
 ### Architecture
-The authors simplify the prior SSM architectures by combining the prior SSM architecutres with the MLP block of Transformers into a single block (Mamba).
+The authors simplify the prior SSM architectures by combining the prior SSM architectures with the MLP block of Transformers into a single block (Mamba).
 
 Selective SSMs and by extension the Mamba architecture are **fully recurrent models** with key properties such as
 
@@ -45,7 +45,7 @@ Selective SSMs and by extension the Mamba architecture are **fully recurrent mod
 
 
 ## State Space Models
-Structured state space models (S4) is a recent class of sequence moels for deep learning that are related to RNN, CNN, and classical state space models. They are defined with four parameters {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %}and are inspired by a continuous system
+Structured state space models (S4) is a recent class of sequence models for deep learning that are related to RNN, CNN, and classical state space models. They are defined with four parameters {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %}and are inspired by a continuous system
 
 {% katexmm %}
 $$
@@ -84,7 +84,7 @@ $$
 
 #### Linear Time Invariance
 
-A key property of equations (1), (2), and (3) is **Linear Time Invariance (LTI)**. This means that {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %} and {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} are fixed for all time-steps. However, LTI models have foundamental limitations in modeling in certain types of data. Thus, the authors propose a method involve *removing* the LIT constraints while overcoming the efficiency bottlenecks.
+A key property of equations (1), (2), and (3) is **Linear Time Invariance (LTI)**. This means that {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %} and {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} are fixed for all time-steps. However, LTI models have fundamental limitations in modeling in certain types of data. Thus, the authors propose a method involve *removing* the LIT constraints while overcoming the efficiency bottlenecks.
 
 #### Efficiency Bottleneck
 
@@ -138,18 +138,18 @@ The authors address the computation problem of SSMs with three classical techniq
 1. Recurrent computation uses {% katexmm %}$O(BLDN)${% endkatexmm %} FLOPS while convolutional computation uses {% katexmm %}$O(BLD\log(L))${% endkatexmm %} FLOPs. Therefore, for long sequences and not-too-large state dimension {% katexmm %}$N${% endkatexmm %}, recurrent actually uses fewer FLOPs.
 2. The two challenges are ***sequential nature of recurrence*** and the ***large memory usage***. To address the later, we can not materialize the full state {% katexmm %}$h${% endkatexmm %}.
 
-The main idea is to only materialize the state {% katexmm %}$h${% endkatexmm %} only in more efficient levels of *memory hierarchy* by levearing properties of modern accelerators. In particular, most operations are bounded by memory bandwith, including our **scan operation**. We use *kernel fusion* to reduce the amount of memory IOs, significantly speed up the process implementation.
+The main idea is to only materialize the state {% katexmm %}$h${% endkatexmm %} only in more efficient levels of *memory hierarchy* by levearing properties of modern accelerators. In particular, most operations are bounded by memory bandwidth, including our **scan operation**. We use *kernel fusion* to reduce the amount of memory IOs, significantly speeding up the process implementation.
 
 More specifically,
 - To prepare the scan input {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} of size {% katexmm %}$(B, L, D, B)${% endkatexmm %}, we load SSM parameters {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %} from slow High Bandwith Memory (HBM) to fast SRAM, perform discretization and recurrence, and then move back output of size {% katexmm %}$(B,L,D)${% endkatexmm %} back to HBM.
 - The process is parallelized with a work-efficient parallel scan algorithm to avoid sequential recurrence.
-- Employ *recomputation* to reduce the memory requiremtns by avoiding saving the intermediate states.
+- Employ *recomputation* to reduce the memory requirements by avoiding saving the intermediate states.
 
 ### A Simplified SSM Architecture
 
-Similar to other SSMs, selective SSMs are standalone *sequence transformations* that can be flexibly incorporated into neural networks. Previously, the most well-known SSM architecutre is the H3 architecture, which is comprised of a block inspired by *linear attention* interleaved with an *MLP* block. This work simplifies the above architecture by combining those two components into one.
+Similar to other SSMs, selective SSMs are standalone *sequence transformations* that can be flexibly incorporated into neural networks. Previously, the most well-known SSM architecture is the H3 architecture, which is comprised of a block inspired by *linear attention* interleaved with an *MLP* block. This work simplifies the above architecture by combining those two components into one.
 
-The architecture expands the model dimension {% katexmm %}$D${% endkatexmm %} by a controllable expansion factor {% katexmm %}$E${% endkatexmm %}. Most of the parameters ({% katexmm %}$3ED^2${% endkatexmm %}) are in the linear projections, while the number of SSM parameters are much less in comparison. 
+The architecture expands the model dimension {% katexmm %}$D${% endkatexmm %} by a controllable expansion factor {% katexmm %}$E${% endkatexmm %}. Most of the parameters ({% katexmm %}$3ED^2${% endkatexmm %}) are in the linear projections, while the number of SSM parameters is much less in comparison. 
 
 <div class='figure'>
     <img src="/image/mamba_block.png"
@@ -197,7 +197,7 @@ In case of multiple independent sequences are stitched together, Transformers ca
 The selectivity in {% katexmm %}$\Delta${% endkatexmm %} is enough to ensure the selectivity in {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %}. Making {% katexmm %}$A${% endkatexmm %} is hypothesized to have similar performance, thus left out for simplicity.
 
 ***Interpretation of {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %}***
-Modifying {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %} allows **finer-grained** control over whether to let an input {% katexmm %}$x_t${% endkatexmm %} into the state {% katexmm %}$h_t${% endkatexmm %} or the state {% katexmm %}$h_t${% endkatexmm %} into the output {% katexmm %}$y_t${% endkatexmm %}. These can be interepted as allowing the model to modulate the recurrent dynamics based on the content (input) and context (hidden states) respectively
+Modifying {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %} allows **finer-grained** control over whether to let an input {% katexmm %}$x_t${% endkatexmm %} into the state {% katexmm %}$h_t${% endkatexmm %} or the state {% katexmm %}$h_t${% endkatexmm %} into the output {% katexmm %}$y_t${% endkatexmm %}. These can be interpreted as allowing the model to modulate the recurrent dynamics based on the content (input) and context (hidden states) respectively
 
 ### Additional Information
 Previously, most SSMs use complex numbers in state {% katexmm %}$h${% endkatexmm %}. However, it has been empirically observed that *completely real-valued* SSMs seem to work fine, possibly better in some settings. The author hypothesizes that the **complex-real tradeoff** is related to the **continuous-discrete** spectrum in data modalities, where
