--- a/_posts/2024-03-04-mamba.md
+++ b/_posts/2024-03-04-mamba.md
@@ -11,12 +11,12 @@ published: true
 
 ## Introduction
 
-Foundation models are large models pretrained on massive data then adapted for downstream tasks. FMs often employ sequence models as backbone and are currently predonminantly based on the Transformer.
+Foundation models are large models pre-trained on massive data and then adapted for downstream tasks. FMs often employ sequence models as the backbone and are currently predominantly based on the Transformer.
 
-The efficacy of **self-attention** in the Transformer attributes to
+The efficacy of **self-attention** in the Transformer attributed to
 - the ability to route information densely within a *context window*
 
-However, this property also brings in foundamental drawbacks
+However, this property also brings in fundamental drawbacks
 - the inability to model anything outside of the *finite* context window
 - *quadratic scaling* with respect to the window length
 
@@ -61,8 +61,6 @@ that maps a 1-dimensional function or sequence {% katexmm %}$x(t)\in \R \mapsto 
 Currently, the S4 models use the four parameters to define a *sequence-to-sequence* transformation in **two** stages:
 
 1. **Discretization** - the first stage that transforms the "*continuous* parameters" {% katexmm %}$(\Delta,A,B)${% endkatexmm %} to "*discrete* parameters" {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} through fixed formulas {% katexmm %}$\bar{A} = f_A(\Delta,A)${% endkatexmm %} and {% katexmm %}$\bar{B} = f_B(\Delta,A,B)${% endkatexmm %}, where {% katexmm %}$(f_A,f_B)${% endkatexmm %} is a discretization rule. Various rules can be used. Below is an exmpler rule using the zero-order hold (ZOH):
-
-
 {% katexmm %}
 $$
 \bar{A} = \exp(\Delta A) \quad \bar{B} = (\Delta A)^{-1}(\exp(\Delta A) - I) \cdot \Delta B 
@@ -84,16 +82,16 @@ $$
 
 #### Linear Time Invariance
 
-A key property of equations (1), (2), and (3) is **Linear Time Invariance (LTI)**. This means that {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %} and {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} are fixed for all time-steps. However, LTI models have fundamental limitations in modeling in certain types of data. Thus, the authors propose a method involve *removing* the LIT constraints while overcoming the efficiency bottlenecks.
+A key property of equations (1), (2), and (3) is **Linear Time Invariance (LTI)**. This means that {% katexmm %}$(\Delta, A, B, C)${% endkatexmm %} and {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %} are fixed for all time-steps. However, LTI models have fundamental limitations in modeling in certain types of data. Thus, the authors propose a method that *removes* the LTI constraints while overcoming the efficiency bottlenecks.
 
 #### Efficiency Bottleneck
 
-In addition, note that the structured SSMs are so named because it requires imposing structure on {% katexmm %}$A${% endkatexmm %} matrix to compute efficiently. Commonly, {% katexmm %}$A${% endkatexmm %} is imposed to be a diagonal matrix. In this case, {% katexmm %}$A\in \R^{N\times N}, B \in \R^{N\times1}, C \in \R^{1\times N}${% endkatexmm %} can all be represented by {% katexmm %}$N${% endkatexmm %} numbers.
+In addition, the structured SSMs are so named because it requires imposing structure on {% katexmm %}$A${% endkatexmm %} matrix to compute efficiently. Commonly, {% katexmm %}$A${% endkatexmm %} is imposed to be a diagonal matrix. In this case, {% katexmm %}$A\in \R^{N\times N}, B \in \R^{N\times1}, C \in \R^{1\times N}${% endkatexmm %} can all be represented by {% katexmm %}$N${% endkatexmm %} numbers.
 
 Consider an input sequence {% katexmm %}$x${% endkatexmm %} of batch size {% katexmm %}$B${% endkatexmm %} and length {% katexmm %}$L${% endkatexmm %} with {% katexmm %}$D${% endkatexmm %} channels, the SSM is independently applied to each channel. Then, the total hidden spaces have {% katexmm %}$DN${% endkatexmm %} per input, and computing over the sequence length requires {% katexmm %}$O(BLDN)${% endkatexmm %} time and memory. This is the root of the *efficeincty 
 bottleneck*.
 
-## Selective state Space Models
+## Selective State Space Models
 
 This section is dedicated to explain the selection mechanism, its motivation and implementation. 
 
@@ -184,7 +182,7 @@ Selectivity allows filtering out irrelevant noise tokens that may occur between 
 ***Filtering Context***
 Many sequence models do not improve with longer context due to their inability to effectively *ignore* irrelevant context. On the other hand, selective models can simply **reset** their state at any time to remove extraneous history, improving the performance with longer context length.
 
-***Boundary Restting***
+***Boundary Resetting***
 In case of multiple independent sequences are stitched together, Transformers can keep them separate by instantiating a particular attention mask. LTI models, on the other hand, will bleed information between sequences. Selective SSMs **resets** their state at boundaries. 
 
 ***Interpretation of {% katexmm %}$\Delta${% endkatexmm %}***
@@ -197,7 +195,7 @@ In case of multiple independent sequences are stitched together, Transformers ca
 The selectivity in {% katexmm %}$\Delta${% endkatexmm %} is enough to ensure the selectivity in {% katexmm %}$(\bar{A}, \bar{B})${% endkatexmm %}. Making {% katexmm %}$A${% endkatexmm %} is hypothesized to have similar performance, thus left out for simplicity.
 
 ***Interpretation of {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %}***
-Modifying {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %} allows **finer-grained** control over whether to let an input {% katexmm %}$x_t${% endkatexmm %} into the state {% katexmm %}$h_t${% endkatexmm %} or the state {% katexmm %}$h_t${% endkatexmm %} into the output {% katexmm %}$y_t${% endkatexmm %}. These can be interpreted as allowing the model to modulate the recurrent dynamics based on the content (input) and context (hidden states) respectively
+Modifying {% katexmm %}$B${% endkatexmm %} and {% katexmm %}$C${% endkatexmm %} allows **fine-grained** control over whether to let an input {% katexmm %}$x_t${% endkatexmm %} into the state {% katexmm %}$h_t${% endkatexmm %} or the state {% katexmm %}$h_t${% endkatexmm %} into the output {% katexmm %}$y_t${% endkatexmm %}. These can be interpreted as allowing the model to modulate the recurrent dynamics based on the content (input) and context (hidden states) respectively.
 
 ### Additional Information
 Previously, most SSMs use complex numbers in state {% katexmm %}$h${% endkatexmm %}. However, it has been empirically observed that *completely real-valued* SSMs seem to work fine, possibly better in some settings. The author hypothesizes that the **complex-real tradeoff** is related to the **continuous-discrete** spectrum in data modalities, where
